refactor: refact the project